2014-01-21   Ryan Miller
 * Added some response text Hello, world!

 * Initialized repository, created server.py and README.

 * hw2, added some unit tests